# ark

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs
src/cli/: input.rs  mod.rs  ui.rs
src/crypto/: mod.rs
src/domain/: error.rs  mod.rs
src/service/: mod.rs
src/storage/: mod.rs
