[package]
name = "ark"
version = "1.0.0"
edition = "2021"
description = "🔐 Secure offline password vault with TUI"
authors = ["LouisYeap"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Crypto
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1.0"
dirs = "6"
arboard = "3"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
arboard = "3"

[features]
default = []
